--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.3.1"
+  },
+  "dependencies": {
+    "react-router-dom": "^5.0.1"
   }
 }
